Adds author to package.json and APP_KEY name on readme

--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "dcu-grab",
+  "name": "custom-oracle-dcu-grabber",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "author": {
+    "name": "Gustavo Santana",
+    "email": "contato.santanagustavo@gmail.com"
+  },
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
